[package]
name = "add_macro"
description = "This crate adds the some useful macros for easily work"
version = "0.1.5"
edition = "2021"
authors = ["Draken inc. <t.me/drakeninc>"]
license = "MIT"
homepage = "https://docs.rs/add_macro"
repository = "https://github.com/drakeninc/add_macro"

[dependencies]
display_derive = { version = "0.0.0", path = "lib/display_derive" }
thiserror = "1.0.57"
