[package]
name = "add_macro"
description = "This crate adds the some useful macros for easily work"
version = "0.1.7"
edition = "2021"
authors = ["DrakeN .Inc <t.me/drakeninc>"]
license = "MIT"
homepage = "https://docs.rs/add_macro"
repository = "https://github.com/drakeninc/add_macro"

[dependencies]
add_macro_display_impl = "0.1.0"
thiserror = "1.0.57"
